--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,13 +15,13 @@
 
     <!-- 김재현 -->
     <string name="name1">김재현</string>
-    <string name="birthday1">00. 00. 00</string>
-    <string name="hobby1">취미에요</string>\
-    <string name="mbti1">INFP</string>
+    <string name="birthday1">97. 08. 02</string>
+    <string name="hobby1">헬스,농구,풋살</string>\
+    <string name="mbti1">ISTJ</string>
     <string name="work1">팀장</string>
-    <string name="moment1"></string>
-    <string name="goal1"></string>
-    <string name="resolve1"></string>
+    <string name="moment1">현업에 있는 형에게서 앱 개발에 관한 이야기를 들었고 흥미가 생겨 지원하게 되었습니다. 사실 저는 비전공자라 아는것보다 모르는게 더 많지만 다른 분야를 배워가면서 다른 팀원들과 함께 일하면서 무언가를 만들어낸다는 것에 흥미가 생겼고 최근에는 스마트폰을 안쓰는 사람을 찾기 더 힘들다는 생각과 그에 따른 앱에 수요도 늘어났다고 생각하여 앱 개발에 관하여 알고있으면 좋을 것 같다고 생각해 지원하게 되었습니다.</string>
+    <string name="goal1"></string>취업도 목표에 있지만 회사에 들어가서 다른 사람에게 피해주지 않는, 나아가 다른 팀원을 도와줄 수 있는 능력이 되는 그런 개발자가 되고 싶습니다.
+    <string name="resolve1"></string>힘들고 어려운 과정이겠지만 포기하지 않고 열심히 해보겠습니다!
 
 
     <!-- 김재혁 -->
