--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,9 +41,9 @@
     <string name="hobby3">음악감상</string>\
     <string name="mbti3">INFJ</string>
     <string name="work3">팀원</string>
-    <string name="moment3">상상을 실재로.\n생각만 하던 것들을 실제로 조작할 수 있도록 구현을 한다는 부분에서 개발에 매력을 느껴서 지원하였습니다.</string>
-    <string name="goal3">내일배움캠프를 통해 기본적인 역량을 갖추고, 취업을 하고 싶습니다.</string>
-    <string name="resolve3">조금 늦더라도 포기하지 않고 끝까지 완주할 수 있도록 하여 목표를 달성하도록 하겠습니다.</string>
+    <string name="moment3">생각만 하던 것들을 실제로 조작할 수 있도록 구현을 한다는 부분에서 개발에 매력을 느껴서 참여했습니다.</string>
+    <string name="goal3">캠프를 통해 기본적인 역량을 갖추고, 이를 강화하여, 생각만 하고 있는 것들을 실제로 구현하고 싶습니다.</string>
+    <string name="resolve3">조금 늦더라도 포기하지 않고 끝까지 완주해서 목표를 달성하도록 하겠습니다.</string>
 
 
     <!-- 이성민 -->
